styleui):restyled the nav component with correct spacing between the components

--- a/src/components/nav/style.css
+++ b/src/components/nav/style.css
@@ -7,12 +7,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Semi-transparent black overlay */
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0;
-  z-index: 10001; /* Higher than the navbar */
+  z-index: 10001;
+  /* Higher than the navbar */
   overflow-y: auto;
   backdrop-filter: blur(10px);
 }
@@ -39,7 +41,8 @@
   position: fixed;
   top: 0vh;
   border-bottom: 1.5px solid rgb(186, 185, 185);
-  padding: 1vw 0;
+  padding: 1vw;
+  padding-left: 5vw;
   display: flex;
   /* justify-content: center; */
   height: 5.5vh;
@@ -107,32 +110,36 @@
 .navbar-container .NavContainer .profile {
   cursor: pointer;
 }
+
 .navbar-container .NavContainer .login-signup-buttons button {
   padding: 0.6rem 1.6rem;
   margin: 1rem;
-  /* background-color: #a1e5cd; */
   border-radius: 0.3rem;
   font-size: 1vw;
   font-weight: 500;
   cursor: pointer;
 }
+
 .login-signup-buttons {
   display: flex;
   flex-shrink: wrap;
   position: absolute;
   right: 0;
-  margin-right: 4vw;
+  margin-right: 12vw;
 }
+
 .logo {
   margin-left: 8vw;
   margin-right: 11vw;
 }
+
 .dsa-tracker-logo {
   font-size: 2.5vw;
   color: #13e098;
   padding-top: 0.5vh;
   margin-right: 0.3vw;
 }
+
 .navbar-container .NavContainer .profile .name {
   font-size: 1.3rem;
 }
@@ -143,6 +150,7 @@
   border-radius: 50%;
   margin-left: 0.5vw;
 }
+
 .Navbar-Logout-Btn {
   display: flex;
   align-items: center;
@@ -285,6 +293,7 @@
   position: absolute;
   right: 0;
 }
+
 .profile-name-nav {
   text-transform: uppercase;
   font-size: 1.3vw;
@@ -293,11 +302,13 @@
   font-style: normal;
   line-height: 3vw;
 }
+
 .user-image-navbar {
   font-size: 2.5vw;
   color: #000;
   padding-left: 0.5vw;
 }
+
 /* .logout-button-navbar {
   background-color: #fff;
   border: none;
